<resources>
    <string name="app_name">MAutismApp</string>

    <!--Admob-->
    <item name="admob" type="bool">true</item>
    <item name="admob_test" type="bool">false</item>
    <string name="test_device_id">D5F00CFCCD8FD2E1D73DD0BE123F2179</string>
    <string name="admob_app_id">ca-app-pub-1339022678359170~1159988212</string>
    <string name="admob_banner_test_key">/6499/example/banner</string>
    <string name="admob_banner1_key">ca-app-pub-1339022678359170/5093124674</string>
    <string name="admob_banner2_key">ca-app-pub-1339022678359170/7774665312</string>
    <string name="admob_banner3_key">ca-app-pub-1339022678359170/3818150579</string>
    <string name="admob_interstitial_test_key">/6499/example/interstitial</string>
    <string name="admob_interstitial1_key">ca-app-pub-1339022678359170/8654817938</string>
    <string name="admob_interstitial2_key">ca-app-pub-1339022678359170/8003767582</string>
    <string name="admob_interstitial3_key">ca-app-pub-1339022678359170/6088050686</string>

    <string name="copyright">ITAK - INJAZ 2019</string>
    <string name="copyright2">Created By : Youness CHAOUI - younesschaoui15@gmail.com</string>
    <string-array name="copyright">
        <item>ITAK COMPANY ®</item>
        <item>FSJES AGADIR - INJAZ 2019</item>
    </string-array>
    <string name="_AppIntroDescription">فضاء للعمل مع طفلك التوحدي بطريقة أصح</string>
    <string name="_assistant">المرافق</string>
    <string name="_childAssistant">الطفل و المرافق</string>
    <string name="_videos">فيديوهات نموذجية</string>
    <string name="_routine">الروتين اليومي</string>
    <string name="_experts">أخصائيين</string>
    <string name="_parent">أباء أقوى من التحدي</string>
    <string name="title_assistantActivity">فضاء المرافق</string>
    <string name="title_childAssistantActivity">فضاء الطفل والمرافق</string>
    <string name="title_activity_routine_list">الروتين اليومي</string>
    <string name="_morning">الفترة الصباحية</string>
    <string name="_night">الفترة المسائية</string>
    <string name="quitter">خروج</string>
    <string name="_take_picture">التقط صورة</string>
    <string name="_choose_picture">اختر صورة من معرض الصور</string>
    <string name="_new_routine">نشاط جديد</string>
    <string name="_record">سجل مقطعا صوتيا</string>
    <string name="_matin">الصباح</string>
    <string name="_soir">المساء</string>
    <string name="_add_to_routine">أضف الى أنشطة اليوم</string>
    <string name="_save">حفظ</string>
    <string name="_repeat">اعادة</string>
    <string name="pick_time">التوقيت</string>
    <string name="_choose_time">اختر التوقيت</string>
    <string name="_error_image">الصورة غير موجودة</string>
    <string name="_error_audio">التسجيل الصوتي غير موجود</string>
    <string name="_error_time">التوقيت غير صحيح</string>
    <string name="_error_save">خطأ في الحفظ. أعد المحاولة</string>
    <string name="_error_vid_load">مشكل في الاتصال وتحميل الفيديو</string>
    <string name="_tasks">الأنشطة</string>
    <string name="_task">النشاط</string>
    <string name="_all_videos">فيديوهات</string>
</resources>
