<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg11"
    tools:context=".createTaskActivity">

    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginTop="15dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="9dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/_take_piicture"
                android:textSize="11sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent" />

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/twotone_photo_camera_black_48dp" />

        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>

    <Button
        android:id="@+id/button"
        android:layout_width="163dp"
        android:layout_height="24dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/btn_radius"
        android:bottomLeftRadius="10dp"
        android:bottomRightRadius="10dp"
        android:text="@string/_choose_picture"
        android:textColor="@android:color/white"
        android:textSize="11sp"
        android:topLeftRadius="10dp"
        android:topRightRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

    <android.support.v7.widget.CardView
        android:id="@+id/cardView1"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginTop="14dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="9dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/_record"
                android:textSize="11sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent" />

            <ImageButton
                android:id="@+id/imageButton1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/twotone_mic_black_48dp" />

        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView1">

        <ToggleButton
            android:id="@+id/toggleButton2"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="ToggleButton"
            android:textColor="@android:color/white"
            android:textColorHint="@color/colorPrimary"
            android:textColorLink="@color/colorPrimary"
            android:textOff="@string/_soir"
            android:textOn="@string/_soir"
            android:textStyle="bold"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <ToggleButton
            android:id="@+id/toggleButton"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="ToggleButton"
            android:textColor="@android:color/white"
            android:textColorHint="@color/colorPrimary"
            android:textColorLink="@color/colorPrimary"
            android:textOff="@string/_matin"
            android:textOn="@string/_matin"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5" />

    </LinearLayout>

    <Button
        android:id="@+id/button2"
        android:layout_width="229dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:background="@drawable/btn_radius2"
        android:padding="5dp"
        android:text="@string/_add_to_routine"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="229dp"
        android:layout_height="35dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="15dp"
        android:ems="10"
        android:hint="الوصف"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

</android.support.constraint.ConstraintLayout>